tests/typing/fail/clock-04.rs
use rust_sync::sync;

sync! {
    node oui() = ()
    where
        a : float = 3.0 whennot a;
}

fn main() {}
