tests/typing/fail/clock-04.stderr
error: type error: the clock `a` should have type `bool`, found `float`
 --> tests/typing/fail/clock-04.rs:8:33
  |
8 |         a : float = 3.0 whennot a;
  |                                 ^
  |
help: `a` was declared here with type `float`
 --> tests/typing/fail/clock-04.rs:8:9
  |
8 |         a : float = 3.0 whennot a;
  |         ^
